# nemo

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.html  DESCRIPTION  Dockerfile  LICENSE-text.html  LICENSE.html  Makefile  NAMESPACE  README.md  README.qmd  authors.html  authors.md  cdk.json  dracarys_tidy.R  index.html  index.md  llms.txt  manage.py  package.json  pkgdown.yml  pyproject.toml  search.json  sitemap.xml
R/: Config.R  NEMO_TOOLS.R  Tool.R  Tool1.R  Workflow.R  Workflow1.R  cli.R  cli_list.R  cli_tidy.R  fs_s3.R  log.R  metadata.R  nemo-package.R  parse.R  utils.R  write.R
articles/: NEWS.html  NEWS.md  contribute.html  contribute.md  devnotes.html  devnotes.md  index.html  index.md  installation.html  installation.md  notes.html  notes.md  structure.html  structure.md  uml.html  uml.md
cdk/: cdk.json  package.json
data-raw/: fake_tool1.R
docs/: README.md  cdk.md  django.md  pixi.md  rds.md  sql.md  tables.md  uv.md
lib/: index.ts  utopia-stack.ts
man/: Config.Rd  NEMO_TOOLS.Rd  Tool.Rd  Tool1.Rd  Workflow.Rd  Workflow1.Rd  config_prep_multi.Rd  config_prep_raw.Rd  config_prep_raw_schema.Rd  config_prep_write.Rd  empty_tbl.Rd  enframe_data.Rd  file_hdr.Rd  get_python.Rd  get_tbl_version_attr.Rd  list_files_dir.Rd  nemo-package.Rd  nemo_cli.Rd  nemo_log.Rd  nemo_log_date.Rd  nemo_metadata.Rd  nemo_osfx.Rd  nemo_write.Rd  nemoverse_wf_dispatch.Rd  parse_file.Rd  parse_file_keyvalue.Rd  parse_file_nohead.Rd  pkg_found.Rd  s3_file_presignedurl.Rd  s3_list_files_dir.Rd  schema_guess.Rd  set_tbl_version_attr.Rd  (+1 more)
(+122 files in other folders)
