[project]
name = "nemo"
version = "0.0.1"
description = "Exploring the depths of bioinformatics data lakes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.1.5",
    "psycopg[binary]>=3.2.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pip>=25.0",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]

[tool.ruff]
line-length = 79
